# SPL_Assignment1

./: Agent.cpp  Agent.h  CMakeLists.txt  Graph.cpp  Graph.h  README.md  Session.cpp  Tree.cpp  Tree.h  config1.json  config2.json  config3.json  makefile
headers/: Agent.h  Graph.h  Session.h  Tree.h  json.hpp
include/: Graph.h  Session.h  Tree.h
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
